Bug 101511 - Crash when clicking emoji group button
Summary: Crash when clicking emoji group button
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: Emoji-Button
  Show dependency treegraph
 
Reported: 2016-08-13 23:07 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-08-16 14:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (17.28 KB, text/x-log)
2016-08-13 23:07 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-08-13 23:07:45 UTC
Created attachment 126822 [details]
backtrace

Steps:
1) Open writer
2) Enable emoji button in standard toolbar
3) Click it
4) Crash

Version: 5.3.0.0.alpha0+
Build ID: 18009fe8fbe3982141ddca3f1fcd0900a63150a6
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-08-12_06:44:06
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Aron Budea 2016-08-13 23:55:42 UTC
Nothing happens when I click on the Emoji icon (not only crash doesn't, nothing else, either).

Version: 5.3.0.0.alpha0+
Build ID: f8b734a4e2b235c12e86d84c7691e39d05786032
CPU Threads: 1; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-08-13_10:26:01
Locale: en-US (en_US.UTF-8); Calc: group


I could reproduce the crash in Windows 7 from a ~1 week-old master build.
Not sure if it's been fixed between Aug. 12-13, and that why there isn't a crash for me in Linux, or there's some other difference.
Either way, nothing happening is probably not the correct behavior, either.
Comment 2 Yousuf Philips (jay) (retired) 2016-08-14 10:15:01 UTC
So it crashes even the day after the patch was merged for me.

https://gerrit.libreoffice.org/#/c/26700/

Version: 5.3.0.0.alpha0+
Build ID: 389b08190092f9a9103b3ac098994ec83b2d0bfa
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-08-02_01:46:19
Locale: en-US (en_US.UTF-8); Calc: group
Comment 3 Yousuf Philips (jay) (retired) 2016-08-15 08:49:03 UTC
So the issue only happens on TDF builds, but not on custom builds.

Crash also happens on Windows.

Version: 5.3.0.0.alpha0+
Build ID: 93eb0896bc30163dba47e20459dd0d14fb9770f9
CPU Threads: 4; OS Version: Windows 6.29; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-08-15_04:51:49
Locale: en-US (en_US); Calc: CL
Comment 4 Aron Budea 2016-08-15 10:03:00 UTC
This is the Windows dbgutil build I could reproduce the crash with, from 2016-08-05.

Version: 5.3.0.0.alpha0+
Build ID: 07966a9999b0b3f27e1adeea1f4c97b3ba2944fa
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: hu-HU (hu_HU); Calc: CL

Since you're getting the crash on Windows as well, that confirms it's still there. Setting to NEW.
Comment 5 Caolán McNamara 2016-08-16 12:24:42 UTC
I wonder if emoji.json isn't installed (properly or at all) in the install.

Is there a share/emojiconfig/emoji.json with the same toplevel share as e.g. share/fonts/fonts/truetype/
Comment 6 Commit Notification 2016-08-16 12:36:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ce624ea8abd583eb8007c39669795e3ab808b35

Related: tdf#101511 don't crash is emoji data is missing

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2016-08-16 12:42:06 UTC
I bet its missing and I bet we have to add it to scp2 to get it packaged up right
Comment 8 Commit Notification 2016-08-16 14:18:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76de7bbf3625efd9f4eeb2183bb0bd22e7a795db

Resolves: tdf#101511 package the emoji config stuff into install

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.