Related: tdf#101511 don't crash is emoji data is missing

Change-Id: I4209763671b1a84cd9d35e0c90f5f3dff05b23b8